<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_weight="40"
        android:gravity="bottom|end"
        android:hint="@string/zero"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/large_text" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_weight="10"
        android:gravity="bottom|end"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_weight="50">

        <Button
            android:id="@+id/clear"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@id/seven"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@id/percent"
            app:layout_constraintStart_toEndOf="@id/clear"
            app:layout_constraintTop_toTopOf="@id/clear" />

        <Button
            android:id="@+id/percent"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            app:layout_constraintEnd_toStartOf="@id/divide"
            app:layout_constraintStart_toEndOf="@id/delete"
            app:layout_constraintTop_toTopOf="@id/clear" />

        <Button
            android:id="@+id/divide"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/percent"
            app:layout_constraintTop_toTopOf="@id/clear" />

        <Button
            android:id="@+id/seven"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@id/four"
            app:layout_constraintEnd_toStartOf="@id/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear" />

        <Button
            android:id="@+id/eight"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            app:layout_constraintEnd_toStartOf="@id/nine"
            app:layout_constraintStart_toEndOf="@id/seven"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <Button
            android:id="@+id/nine"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            app:layout_constraintEnd_toStartOf="@id/multiple"
            app:layout_constraintStart_toEndOf="@id/eight"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <Button
            android:id="@+id/multiple"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nine"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <Button
            android:id="@+id/four"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@id/one"
            app:layout_constraintEnd_toStartOf="@id/five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven" />

        <Button
            android:id="@+id/five"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            app:layout_constraintEnd_toStartOf="@id/six"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintTop_toTopOf="@id/four" />

        <Button
            android:id="@+id/six"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            app:layout_constraintEnd_toStartOf="@id/subtraction"
            app:layout_constraintStart_toEndOf="@id/five"
            app:layout_constraintTop_toTopOf="@id/four" />

        <Button
            android:id="@+id/subtraction"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/six"
            app:layout_constraintTop_toTopOf="@id/four" />

        <Button
            android:id="@+id/one"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@id/dot"
            app:layout_constraintEnd_toStartOf="@id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four" />

        <Button
            android:id="@+id/two"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_constraintEnd_toStartOf="@id/three"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/one" />

        <Button
            android:id="@+id/three"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            app:layout_constraintEnd_toStartOf="@id/addition"
            app:layout_constraintStart_toEndOf="@id/two"
            app:layout_constraintTop_toTopOf="@id/one" />

        <Button
            android:id="@+id/addition"
            style="@style/OperationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/three"
            app:layout_constraintTop_toTopOf="@id/one" />

        <Button
            android:id="@+id/dot"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/one"
            app:layout_constraintStart_toStartOf="@id/one"
            app:layout_constraintTop_toBottomOf="@id/one" />

        <Button
            android:id="@+id/zero"
            style="@style/NumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@id/two"
            app:layout_constraintStart_toStartOf="@id/two"
            app:layout_constraintTop_toTopOf="@id/dot" />

        <Button
            android:id="@+id/equals"
            style="@style/EqualButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            app:layout_constraintBottom_toBottomOf="@id/dot"
            app:layout_constraintEnd_toEndOf="@id/addition"
            app:layout_constraintStart_toStartOf="@id/three"
            app:layout_constraintTop_toTopOf="@id/dot" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>